test/error/MethodAbstractPrivate.ci
public abstract class Test
{
	abstract bool Run(); //ERROR: Abstract method cannot be private
}
